# rpg_quadrotor_common

./: .clangd  README.md  dependencies.yaml
quadrotor_common/: CMakeLists.txt  package.xml
quadrotor_common/include/quadrotor_common/: control_command.h  geometry_eigen_conversions.h  math_common.h  parameter_helper.h  quad_state_estimate.h  quaternion_functions.h  trajectory.h  trajectory_point.h
quadrotor_common/src/: control_command.cpp  geometry_eigen_conversions.cpp  math_common.cpp  parameter_helper.cpp  quad_state_estimate.cpp  quaternion_functions.cpp  trajectory.cpp  trajectory_point.cpp
quadrotor_msgs/: CMakeLists.txt  package.xml
state_predictor/: CMakeLists.txt  package.xml
state_predictor/include/state_predictor/: quad_ext_state_estimate.h  state_predictor.h
state_predictor/src/: quad_ext_state_estimate.cpp  state_predictor.cpp
